--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     
-<h1 id="test"></h1>
+<h1 id="main">Simple weather app </h1>
 
+<input id="formulaire" type="text" value="Search for a city">
+<button id="btn">SUBMIT</button>
 
 
   
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
