--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>Vite App</title>
-  </head>
-  <body>
-    
-<h1 id="main">Simple weather app </h1>
 
-<input id="formulaire" type="text" value="Search for a city">
-<button id="btn">SUBMIT</button>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <title>Vite App</title>
+</head>
 
+<body>
 
-  
-    <script type="module" src="main.js"></script>
-  </body>
+  <h1 id="main">Simple weather app </h1>
+
+  <input id="formulaire" type="text" value="Search for a city">
+  <button id="btn">SUBMIT</button>
+
+  <div id="sect-container"></div>
+
+  <script type="module" src="main.js"></script>
+</body>
+
 </html>
