--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
 
   <h1 id="main">Simple weather app </h1>
-
-  <input id="formulaire" type="text" value="Search for a city">
-  <button id="btn">SUBMIT</button>
+  <form action="#" id="form">
+    <input id="formulaire" type="text" value="Search for a city">
+    <button id="btn" type="submit">SUBMIT</button>
+  </form>
 
   <div id="sect-container"></div>
 
